# rust-puzzle-solver

./: .gitignore  .travis.yml  Cargo.toml  README.md
doc/: algo.md
src/: common.rs  main.rs  piece.rs  scan.rs  step10_matching.rs  step11_build.rs  step12_draw.rs  step1_detect.rs  step3_rotate.rs  step4_bump.rs  step4_bump_hidding.rs  step5_corners.rs  step5_points.rs  step6_hbpoints.rs  step7_quality.rs  step8_fix.rs  step9_cleanup.rs
tests/: real-1.txt  real2-sol.txt
