[package]
name = "rust-puzzle-solver"
version = "0.1.0"
authors = ["Sebastien Valat <sebastien.valat@gmail.com>"]
description = "A tool to solve puzzles from photos of pieces"
keywords = ["puzzle","solver","picture"]
license = "CeCILL-C"
publish = false

[profile.debug]
panic = "abort"

[dependencies]
image = "0.19.0"
#imageproc = "0.15.0"
imageproc = {git = "https://github.com/PistonDevelopers/imageproc.git", rev = "efeabd5d7"}
scoped-pool = "1"
argparse = "0.2.1"
ndarray = "0.11.0"
num-traits = "0.1.43"
